--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "cookie-parser": "^1.4.5",
+    "cookieparser": "^0.1.0",
+    "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8"
   }
 }
