--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
     "cookieparser": "^0.1.0",
+    "dayjs": "^1.10.7",
     "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8"
   }
