--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nuxt",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nuxt build",
+    "start": "nuxt start"
   },
   "keywords": [],
   "author": "",
