发布部署-测试

--- a/.github / workflows / main.yml
+++ b/.github / workflows / main.yml
@@ -53,7 +53,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /root/realworld-nuxt
+          cd /root/realWorld-nuxt
           wget https://github.com/nicole-Ly/realWorld-nuxt/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           npm install --production
